--- a/_config.yml
+++ b/_config.yml
@@ -1,39 +1,37 @@
 # Site Settings
-name: Jekflix
-title: Jekflix | A blog theme for Jekyll
-description: Jekflix is a template for Jekyll inspired by Netflix and made by Thiago Rossener.
+name: Thunkable Recipes Site
+title: Recipes for Thunkable
+description: Helping your cook up your next great app idea
 tags:
   - blog
   - template
   - jekyll
   - theme
   - netlify
-email: youremail@xyz.com
-disqus_username: disqus_username
-show_hero: true
+show_hero: false
 menu:
   - title: Home
     url: /
-  - title: About
-    url: /about
   - title: Contact
     url: /contact
   - title: Feed
     url: /feed.xml
+email: domhanll@thunkable.com
+disqus_username: disqus_username
 
 
 # Social Media Settings
 # Remove the item if you don't need it
-github_username: github_username
-facebook_username: facebook_username
-twitter_username: twitter_username
-instagram_username: instagram_username
-linkedin_username: linkedin_username
-medium_username: medium_username
+github_username: thunkable
+facebook_username: thunkable
+twitter_username: thunkable
+instagram_username: thunkable
+linkedin_username: thunkable
+medium_username: thunkable
 
 
 # Posts Settings
-show_time_bar: true
+show_time_bar: false
 show_modal_on_exit: false
 show_modal_on_finish_post: true
 two_columns_layout: true
@@ -56,7 +54,7 @@ collections:
   authors:
     output: true
 paginate_path: "/page/:num/"
-show_get_theme_btn: true
+show_get_theme_btn: false
 use_logo: false
 
 # Content paginator
