--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@ tags:
 show_hero: false
 menu:
   - title: Home
-    url: recipes/
+    url: /
   - title: Contact
-    url: recipes/contact
+    url: /contact
   - title: Feed
-    url: recipes/feed.xml
+    url: /feed.xml
 email: domhanll@thunkable.com
 disqus_username: disqus_username
 
@@ -38,8 +38,8 @@ two_columns_layout: true
 
 
 # Advanced Settings
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site
+baseurl: "/recipes" # the subpath of your site, e.g. /blog
+url: "https://domhnallohanlon.github.io" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
