--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,25 @@
 # Site Settings
-name: Thunkable Recipes Site
-title: Recipes for Thunkable
-description: Helping your cook up your next great app idea
+name: Thunkable Recipes
+title: Thunkable App Recipes
+description: Learn how to create apps quickly and how to get the most from your Thunkable account.
 tags:
-  - blog
+  - no-code
   - template
-  - jekyll
+  - Thunkable
   - theme
   - netlify
-show_hero: false
+show_hero: true
 menu:
   - title: Home
     url: /
+  - title: About
+    url: /about
   - title: Contact
     url: /contact
   - title: Feed
     url: /feed.xml
-email: domhanll@thunkable.com
-disqus_username: disqus_username
+email: domhnall@thunkable.com
+#disqus_username: disqus_username
 
 
 # Social Media Settings
@@ -38,8 +40,8 @@ two_columns_layout: true
 
 
 # Advanced Settings
-baseurl: "/recipes" # the subpath of your site, e.g. /blog
-url: "https://domhnallohanlon.github.io" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site
 google_analytics: "UA-XXXXXXXX-X"
 language: "en"
 categories_folder: category
