--- a/src/yml/social.yml
+++ b/src/yml/social.yml
@@ -1,6 +1,6 @@
-github_username: github_username
-facebook_username: facebook_username
-twitter_username: twitter_username
-instagram_username: instagram_username
-linkedin_username: linkedin_username
-medium_username: medium_username
+github_username: thunkable
+facebook_username: thunkable
+twitter_username: thunkable
+instagram_username: thunkable
+linkedin_username: thunkable
+medium_username: thunkable
