--- a/src/yml/theme.yml
+++ b/src/yml/theme.yml
@@ -1,5 +1,12 @@
-themeColor: '#ff0a16'
-primaryDark: '#141414'
-accentDark: '#ffffff'
+themeColor: '#EB524A'
+primaryDark: '#ffffff'
+accentDark: '#000000'
 lightGray: '#f2f2f2'
 texts: '#333333'
+
+
+#themeColor: '#ff0a16'
+#primaryDark: '#141414'
+#accentDark: '#ffffff'
+#lightGray: '#f2f2f2'
+#texts: '#333333'
